css comment added

--- a/projectcss.css
+++ b/projectcss.css
@@ -130,9 +130,9 @@
     background-color: #182C61;
     color: white;
  }
- .p_des{
-    /* text-align: justify; */
- }
+ /* .p_des{
+     text-align: justify; 
+ } */
 
 
  .footer-container{
