--- a/entree-app/src/app/top-category/top-category.component.html
+++ b/entree-app/src/app/top-category/top-category.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5" id="topcategory">
+<div class="container mt-5" id="topcat">
     <h2 class="text">Top Category</h2>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 mt-4">
         <div *ngFor="let tc of topcat" class="card1">
