--- a/entree-app/src/app/new-items/new-items.component.html
+++ b/entree-app/src/app/new-items/new-items.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5" id="recommend">
+<div class="container mt-5" id="newitems">
     <h2 class="text">New Items</h2>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 mt-4">
         <div *ngFor="let rec of newItems" class="card1">
