--- a/entree-app/src/app/footer/footer.component.css
+++ b/entree-app/src/app/footer/footer.component.css
@@ -1,5 +1,6 @@
 .footer_main {
-  position: absolute;
+  margin-top: 20px;
+  position: relative;
   bottom: 0;
   width: 100%;
   background-color: #182c61;
