--- a/entree-app/src/app/register/register.component.html
+++ b/entree-app/src/app/register/register.component.html
@@ -1,1 +1,83 @@
-<p>register works!</p>
+<div class="container">
+  <div class="logincard">
+    <div class="loginimage">
+      <img src="../../assets/register.jpg" alt="image" />
+    </div>
+    <div class="loginform">
+      <h1>Register</h1>
+      <div class="m-5 d-flex justify-content-center">
+        <form action="" class="w-75">
+          <div class="row mb-3">
+            <div>
+              <label class="form-label fs-6" for="name">Name </label>
+              <input
+                type="text"
+                id="name"
+                class="form-control form-control"
+                required
+              />
+            </div>
+          </div>
+          <div class="row mb-3">
+            <div>
+              <label class="form-label fs-6" for="email">Email </label>
+              <input
+                type="text"
+                id="email"
+                class="form-control form-control"
+                required
+              />
+            </div>
+          </div>
+
+          <div class="row mb-3">
+            <div>
+              <label class="form-label fs-6" for="pnumber">Phone Number</label>
+              <input
+                type="number"
+                id="pnumber"
+                class="form-control form-control"
+                required
+              />
+            </div>
+          </div>
+
+          <div class="row mb-3">
+            <div>
+              <label class="form-label fs-6" for="password">Password</label>
+              <input
+                type="password"
+                id="password"
+                class="form-control form-control"
+                required
+              />
+            </div>
+          </div>
+          <div class="row mb-3">
+            <div>
+              <label class="form-label fs-6" for="cnfpassword"
+                >Confirm Password</label
+              >
+              <input
+                type="password"
+                id="cnfpassword"
+                class="form-control form-control"
+                required
+              />
+            </div>
+          </div>
+
+          <div class="button fs-2 mt-4">
+            <button type="submit" class="btn btn-success w-25">SignUp</button>
+          </div>
+
+          <div class="row mt-4">
+            <p class="reg_para">
+              Already have acount ? <a href="" class=""> Login </a>
+            </p>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
