header & footer added to forms

--- a/entree-app/src/app/register/register.component.html
+++ b/entree-app/src/app/register/register.component.html
@@ -1,3 +1,4 @@
+<app-header/>
 <div class="container">
   <div class="logincard">
     <div class="loginimage">
@@ -81,3 +82,4 @@
     </div>
   </div>
 </div>
+<app-footer/>
