--- a/entree-app/src/app/forgetpass/forgetpass.component.html
+++ b/entree-app/src/app/forgetpass/forgetpass.component.html
@@ -1,3 +1,4 @@
+<app-header/>
 <div class="container">
     <div class="logincard ">
     
@@ -58,3 +59,5 @@
       
     </div>
   </div>
+
+  <app-footer/>
