--- a/entree-app/src/app/login/login.component.html
+++ b/entree-app/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<app-header/>
 <div class="container">
     <div class="logincard ">
     
@@ -50,3 +51,5 @@
       </div>
     </div>
   </div>
+
+  <app-footer/>
