footer alignment added

--- a/entree-app/src/app/footer/footer.component.html
+++ b/entree-app/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer_main">
-  <div class="footer-top d-flex">
+  <div class="footer-top d-flex pt-3">
     <div class="contain">
       <p class="mp">COMPANY</p>
       <p><a class="footer_link" href="">Us</a></p>
@@ -31,7 +31,7 @@
       <p><a class="footer_link" href="">Register</a></p>
     </div>
   </div>
-  <div class="footer_copyright d-flex flex-wrap">
+  <div class="footer_copyright d-flex flex-wrap pb-3">
     <div>
       <img src="../../assets/logo.png" alt="" width="100px" />
     </div>
