Navigation Links Added

--- a/entree-app/src/app/forgetpass/forgetpass.component.html
+++ b/entree-app/src/app/forgetpass/forgetpass.component.html
@@ -42,11 +42,11 @@
             </div>
   
             <div class="row mt-4 ">
-           <p class="reg_para"> New User ?  <a href="" class=""> Signup  </a></p>
+           <p class="reg_para"> New User ?  <a href="/signup" class=""> Signup  </a></p>
             </div>
             <div class="row ">
                 <p class="reg_para">
-                  Already have acount ? <a href="" class=""> Login </a>
+                  Already have acount ? <a href="/login" class=""> Login </a>
                 </p>
               </div>
          
