--- a/entree-app/src/app/register/register.component.html
+++ b/entree-app/src/app/register/register.component.html
@@ -69,12 +69,12 @@
           </div>
 
           <div class="button fs-2 mt-4">
-            <button type="submit" class="btn btn-success w-25">SignUp</button>
+            <button type="submit" (onclick)="dashboard()" class="btn btn-success w-25">SignUp</button>
           </div>
 
           <div class="row mt-4">
             <p class="reg_para">
-              Already have acount ? <a href="" class=""> Login </a>
+              Already have acount ? <a href="/login" class=""> Login </a>
             </p>
           </div>
         </form>
