--- a/entree-app/src/app/login/login.component.html
+++ b/entree-app/src/app/login/login.component.html
@@ -36,11 +36,12 @@
          
   
             <div class="button  fs-2 mt-4">
-              <button type="submit" class="btn btn-success w-25">SignUp</button>
+              <button type="submit" class="btn btn-success w-25">Login</button>
             </div>
   
             <div class="row mt-4 ">
-           <p class="reg_para"> New User ?  <a href="" class=""> Signup  </a></p>
+              <p class="reg_para"> Forgot Password ?  <a href="/forgetpassword" class="" > Click here  </a></p>
+           <p class="reg_para"> New User ?  <a href="/signup" class="" > Signup  </a></p>
             </div>
          
           </form>
