header responsive feature added

--- a/entree-app/src/app/exclusive-brands/exclusive-brands.component.html
+++ b/entree-app/src/app/exclusive-brands/exclusive-brands.component.html
@@ -1,5 +1,5 @@
 
-<div class="container mt-5" id="exlusiveItems">
+<div class="container mt-5" id="exlusivebrands">
     <h2 class="text">Shop Exclusive Brands</h2>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 mt-4">
         <div *ngFor="let eb of exbrand" class="card1">
