--- a/entree-app/src/app/footer/footer.component.html
+++ b/entree-app/src/app/footer/footer.component.html
@@ -28,7 +28,7 @@
 
     <div class="contain">
       <p class="mp">SIGN UP</p>
-      <p><a class="footer_link" href="/signup">Register</a></p>
+      <p><a class="footer_link" routerLink="/signup">Register</a></p>
     </div>
   </div>
   <div class="footer_copyright d-flex flex-wrap pb-3">
