--- a/entree-app/src/app/header/header.component.css
+++ b/entree-app/src/app/header/header.component.css
@@ -1,105 +1,16 @@
-/* * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-    
-  #searchbar, #searchbarSmall {
-    width: 100%;
-    max-width: 500px;
-    background-color: black;
-    border: 1px solid #555;
-    border-radius: 20px;
-    padding: 9px 4px 9px 40px;
-    background: transparent no-repeat 10px;
-  }
-  
-  #searchbar:focus, #searchbarSmall:focus {
-    outline: none;
-  }
-  
-  #searchbar::-webkit-search-cancel-button, #searchbarSmall::-webkit-search-cancel-button {
-    display: none;
-  }
-  
-  #menu {
-    height: 50px;
-    padding-left: 10px;
-    background-color: #3B3B98;
-  }
-  
-  #menu1 {
-    height: 50px;
-  }
-  .colormenu {
-    color: white;
-    background-color: goldenrod;
-    font-weight: bold;
-    border-radius: 20px;
-    padding: 2px 15px;
-    margin-top:10px;
-    padding-right: 2px;
-    text-decoration: none;
-    width: fit-content;
-  }
-  
-  .colormenu:hover {
-    color: white;
-    text-decoration: none;
-  }
-  
-  .heading-lg {
-    color: white;
-    font-weight: bold;
-  }
-  
-  @media (max-width: 992px) {
-    .heading-lg {
-      color: black;
-      background-color: transparent;
-    }
-  }
-  
-  .navbar-toggler {
-    border: none;
-  }
-  
-  .navbar-toggler-icon {
-    background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg"><path stroke="rgba%280, 0, 0, 0.5%29" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" d="M4 7h22M4 15h22M4 23h22"/></svg>');
-  }
-  
-  @media (max-width: 992px) {
-    .navbar-collapse {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background-color: #3B3B98;
-      padding-top: 20px;
-      padding-left:10px;
-      padding-bottom: 40px;
-      z-index: 1000;
-    }
-  
-    .navbar-nav .nav-link {
-      color: white;
-      font-weight: bold;
-    }
-  } */
-
-#header{
-position: sticky;
-top: 0px;
-z-index: 1;
-color: red;
+#header {
+  position: sticky;
+  top: 0px;
+  z-index: 1;
+  color: red;
 }
 
-.topbar{
-    background-color: white;
+.topbar {
+  background-color: white;
 }
-#searchdiv{
-    display: flex;
-    align-items: center;
+#searchdiv {
+  display: flex;
+  align-items: center;
 }
 #searchbar {
   width: 500px;
@@ -116,9 +27,9 @@ color: red;
 #searchbar::-webkit-search-cancel-button {
   display: none;
 }
-.iconsdiv{
-    display: flex;
-    align-items: center;
+.iconsdiv {
+  display: flex;
+  align-items: center;
 }
 
 #menu {
@@ -154,11 +65,87 @@ color: red;
   text-decoration: none;
 }
 
-#orderdiv{
-    display: flex;
-    gap: 10px;
+#orderdiv {
+  display: flex;
+  gap: 10px;
 }
-.bottom{
-    display: flex;
-    justify-content: space-between;
+.bottom {
+  display: flex;
+  justify-content: space-between;
+}
+
+.cart {
+  height: fit-content;
+  width: 400px;
+  border: 2px solid #3b3b98;
+  position: absolute;
+  right: 77px;
+  margin-top: 8px;
+  z-index: 10;
+  background-color: white;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 4px;
+}
+
+.btn-close {
+  position: absolute;
+  right: 0%;
+
+  margin-right: 10px;
+}
+.h4_cart {
+  /* background-color: #3b3b98; */
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+}
+
+.cart_img {
+  cursor: pointer;
+}
+
+.container_cart {
+
+  width: 95%;
+  
+
+}
+.tiles_cart {
+
+  padding: 5px;
+  display: flex;
+  border: 1px solid #3b3b98;
+  margin-top: 10px;
+}
+.cartitems {
+  
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  padding: 0px 10px;
+  
+
+}
+.count_cart {
+  font-size: large;
+}
+#remove_cart {
+
+  font-size: 10px;
+  position: relative;
+ 
+ 
+}
+.btn_parent{
+  display: flex;
+  justify-content: center;
+}
+
+.cart_btn_checkout{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: #3b3b98;
+  color: white;
+ 
 }
