open button function add

--- a/entree-app/src/app/header/header.component.html
+++ b/entree-app/src/app/header/header.component.html
@@ -163,7 +163,7 @@
           <div id="iconsdiv bg-success" class="iconsdiv">
             <a routerLink="/login"><img src="../../assets/log-in.svg" alt="icon" width="40" height="20" class=""></a>
             <a href=""><img src="../../assets/bell.svg" alt="icon" width="40" height="20" class=""></a>
-            <a href=""><img src="../../assets/shopping-cart.svg" alt="icon" width="40" height="20" class=""></a>
+            <a href=""><img src="../../assets/shopping-cart.svg" alt="icon" width="40" height="20" class="" (click)="openButton()"></a>
     
           </div>
     
