--- a/entree-app/src/app/register/register.component.html
+++ b/entree-app/src/app/register/register.component.html
@@ -6,15 +6,17 @@
     <div class="loginform">
       <h1>Register</h1>
       <div class="m-5 d-flex justify-content-center">
-        <form action="" class="w-75">
+        <form class="w-75">
           <div class="row mb-3">
             <div>
               <label class="form-label fs-6" for="name">Name </label>
               <input
                 type="text"
                 id="name"
+                name="name"
                 class="form-control form-control"
                 placeholder="Enter Your Name"
+                [(ngModel)]="name"
                 required
               />
             </div>
@@ -41,10 +43,12 @@
                 type="text"
                 id="pnumber"
                 class="form-control form-control"
-                placeholder="Create a Security Code *"
-                [(ngModel)]="security_code"
+                placeholder="Create a Security Code"
+                [(ngModel)]="code"
                 name="security_code"
                 required
+                minlength="4"
+                maxlength="4"
               />
             </div>
           </div>
@@ -57,22 +61,23 @@
                 id="password"
                 class="form-control form-control"
                 placeholder="Create Password"
+                required
+                minlength="4"
                 [(ngModel)]="password"
                 name="password"
-                required
               />
             </div>
           </div>
+
           <div class="row mb-3">
             <div>
               <label class="form-label fs-6" for="cnfpassword"
-                >Confirm Password</label
-              >
+                >Confirm Password</label>
               <input
                 type="password"
                 id="cnfpassword"
                 class="form-control form-control"
-                placeholder="Re-enter Password"
+                placeholder="Confirm Password"
                 [(ngModel)]="psw_repeat"
                 name="psw_repeat"
                 required
@@ -81,7 +86,7 @@
           </div>
 
           <div class="button fs-2 mt-4">
-            <button type="submit" (click)="createAccount(email,password,psw_repeat,security_code)" class="btn btn-success w-25">SignUp</button>
+            <button type="submit" (click)="signup()" class="btn btn-success w-25">SignUp</button>
           </div>
 
           <div class="row mt-4">
