wishlist api added

--- a/entree-app/src/app/app.component.html
+++ b/entree-app/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="content">
     <app-header/>
-    <router-outlet/>
+    <!-- <router-outlet/> -->
+     <app-wishlist/>
+      <!-- <app-recommend/> -->
     <app-footer/>
 </div>
