--- a/entree-app/src/app/recommend/recommend.component.html
+++ b/entree-app/src/app/recommend/recommend.component.html
@@ -12,7 +12,7 @@
                     </div>
                     <p class="card-text fs-6 text-justify p_des">{{rec.description}}</p>
                     <div class="d-flex justify-content-between mt-2">
-                        <a href="" class="btn btn-outline-secondary"><img src="../../assets/bookmark.svg" alt="icon" width="35" height="30" class=""></a>
+                        <a class="btn btn-outline-secondary"><img src="../../assets/bookmark.svg" alt="icon" width="35" height="30" class="" (click)="addToList(rec.id)"></a>
                         <button type="button" class="btn btn_add px-4">Add to Cart</button>
                     </div>
                 </div>
