--- a/entree-app/src/app/app.component.html
+++ b/entree-app/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="content">
     <app-header/>
     <!-- <router-outlet/> -->
-     <app-wishlist/>
+     <!-- <app-wishlist/> -->
       <!-- <app-recommend/> -->
+       <app-cart/>
     <app-footer/>
 </div>
