--- a/entree-app/src/app/cart/cart.component.html
+++ b/entree-app/src/app/cart/cart.component.html
@@ -223,5 +223,6 @@
             <button class="btn cart_btn_checkout">Checkout</button>
           </div>
     </div>
+    <button (click)="getCartDetails()">Cart</button>
   </div>
 </div>
