cart & list api calls fixed

--- a/entree-app/src/app/app.component.html
+++ b/entree-app/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="content">
     <app-header/>
-    <!-- <router-outlet/> -->
+    <router-outlet/>
      <!-- <app-wishlist/> -->
       <!-- <app-recommend/> -->
-       <app-cart/>
+       <!-- <app-cart/> -->
     <app-footer/>
 </div>
