--- a/entree-app/src/app/header/header.component.html
+++ b/entree-app/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="cart" id="cart" *ngIf="isVisible">
+<!-- <div class="cart" id="cart" *ngIf="isVisible">
   <div class="h4_cart">
     <h4 class="">Shopping cart</h4>
     <button
@@ -142,7 +142,7 @@
 
 
   </div>
-</div>
+</div> -->
 
 <header id="header">
      <div class="container-fluid topbar">
@@ -162,8 +162,8 @@
     
           <div id="iconsdiv bg-success" class="iconsdiv">
             <a routerLink="/login"><img src="../../assets/log-in.svg" alt="icon" width="40" height="20" class=""></a>
-            <a href=""><img src="../../assets/bell.svg" alt="icon" width="40" height="20" class=""></a>
-            <a><img src="../../assets/shopping-cart.svg" alt="icon" width="40" height="20" class="" (click)="openButton()"></a>
+            <a><img src="../../assets/bookmark.svg" alt="icon" width="40" height="20" class="" (click)="openWishlist()"></a>
+            <a routerLink="/cart"><img src="../../assets/shopping-cart.svg" alt="icon" width="40" height="20" class=""></a>
     
           </div>
     
