--- a/entree-app/src/app/top-category/top-category.component.html
+++ b/entree-app/src/app/top-category/top-category.component.html
@@ -12,8 +12,8 @@
                     </div>
                     <p class="card-text fs-6 text-justify p_des">{{tc.description}}</p>
                     <div class="d-flex justify-content-between mt-2">
-                        <a href="" class="btn btn-outline-secondary"><img src="../../assets/bookmark.svg" alt="icon" width="35" height="30" class=""></a>
-                        <button type="button" class="btn btn_add px-4">Add to Cart</button>
+                        <a class="btn btn-outline-secondary"><img src="../../assets/bookmark.svg" alt="icon" width="35" height="30" class="" (click)="addToList(tc.id)"></a>
+                        <button type="button" class="btn btn_add px-4" (click)="addToCart(tc.id)">Add to Cart</button>
                     </div>
                 </div>
             </div>
